Add update management system with security enhancements and version control
- Introduced a comprehensive update management system, allowing automatic version checks and installations.
- Added security measures in .htaccess files to protect sensitive files and directories across API, CMS, and core components.
- Created a new UpdatesController to handle update checks, history, and processing.
- Implemented version management with a VersionManager class to facilitate version comparisons and updates.
- Added migration support with structured SQL files for database changes during updates.
- Included a user interface for managing updates within the CMS, featuring alerts for available updates and a detailed update history.
- Enhanced .gitignore to manage backup files and maintain directory structure.
- Documented the update process and migration best practices in README files.
- Added example update information in JSON format for testing purposes.

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -3,5 +3,18 @@ Options -MultiViews
 
 RewriteEngine On
 
+# Protect sensitive files
+<FilesMatch "^(config\.php|config\.example\.php|\.env|\.env\.local)$">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
+
+# Protect sensitive directories
+RewriteRule ^(config|vendor|backups|migrations|\.cursor|\.git) - [F,L]
+
+# Protect PHP files in sensitive locations
+RewriteRule ^(config|vendor)/.*\.php$ - [F,L]
+
+# API routing
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
