Add static file handling to .htaccess and integrate new plugins
- Updated .htaccess to exclude static files from rewrite rules, ensuring correct MIME type delivery.
- Added various new plugins including Bootstrap, Chart.js, and Summernote for enhanced UI and functionality.
- Introduced additional language support files for Summernote, improving localization options.
- Included Toastr and SweetAlert for better user notifications and alerts.
- Integrated jQuery and jQuery UI for improved interactivity and UI components.

--- a/cms/.htaccess
+++ b/cms/.htaccess
@@ -16,5 +16,7 @@ RewriteRule ^(config|vendor|backups|migrations|\.cursor|\.git|extensions/vendor)
 RewriteRule ^(config|vendor|extensions/vendor)/.*\.php$ - [F,L]
 
 # CMS routing
+# Exclude static files from rewrite to serve them with correct MIME type
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_URI} !\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map|json|xml|pdf|zip|mp4|webm|ogg|mp3|wav)$ [NC]
 RewriteRule ^ index.php [QSA,L]
