--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ log.txt
 # Backups (exclude backup files but keep directory structure)
 backups/*
 !backups/.gitkeep
+
+# Temporary files directory
+tmp/
