--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ config.local.php
 # Configuration files (use .example files as templates)
 api/config.php
 cms/config.php
+plugins/payku/config.php
+plugins/*/config.php
 
 # Temporary files
 *.tmp
